test/org/midica/testfiles/failing/soundfont-file-too-many-args.midica
INCLUDE inc/instruments.midica

SOUNDFONT  ../working/java-emergency-soundfont.sf2  ../working/java-emergency-soundfont.sf2

0 c /4
